# Knowledge-Base-AI-Chat

./: .replit  README.md  app.py  checkpoint_2025_02_07.md  google_auth.py  models.py  pyproject.toml
static/css/: custom.css
static/js/: main.js
templates/: index.html  login.html
utils/: openai_helper.py  text_processor.py
