[project]
name = "knowledge-base-ai-chat"
version = "0.1.0"
description = "An AI-powered knowledge base chat application for processing and interacting with documents through an intelligent web interface"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-community>=0.3.16",
    "langchain>=0.3.17",
    "numpy>=1.26.4",
    "openai>=1.61.1",
    "psycopg2-binary>=2.9.10",
    "twilio>=9.4.4",
    "werkzeug>=3.1.3",
    "faiss-cpu>=1.10.0",
    "langchain-core>=0.3.33",
    "langchain-openai>=0.3.3",
    "langchain-text-splitters>=0.3.5",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "pypdf2>=3.0.0",
    "oauthlib>=3.2.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "trafilatura>=2.0.0",
]
